; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/port/win32/extr_signal.c_pg_usleep.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/port/win32/extr_signal.c_pg_usleep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pgwin32_signal_event = common dso_local global i32* null, align 8
@WAIT_OBJECT_0 = common dso_local global i64 0, align 8
@EINTR = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pg_usleep(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i32*, i32** @pgwin32_signal_event, align 8
  %4 = icmp ne i32* %3, null
  %5 = zext i1 %4 to i32
  %6 = call i32 @Assert(i32 %5)
  %7 = load i32*, i32** @pgwin32_signal_event, align 8
  %8 = load i64, i64* %2, align 8
  %9 = icmp slt i64 %8, 500
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  br label %15

11:                                               ; preds = %1
  %12 = load i64, i64* %2, align 8
  %13 = add nsw i64 %12, 500
  %14 = sdiv i64 %13, 1000
  br label %15

15:                                               ; preds = %11, %10
  %16 = phi i64 [ 1, %10 ], [ %14, %11 ]
  %17 = trunc i64 %16 to i32
  %18 = call i64 @WaitForSingleObject(i32* %7, i32 %17)
  %19 = load i64, i64* @WAIT_OBJECT_0, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %15
  %22 = call i32 (...) @pgwin32_dispatch_queued_signals()
  %23 = load i32, i32* @EINTR, align 4
  store i32 %23, i32* @errno, align 4
  br label %24

24:                                               ; preds = %21, %15
  ret void
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i64 @WaitForSingleObject(i32*, i32) #1

declare dso_local i32 @pgwin32_dispatch_queued_signals(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
